# high-spec

./: .gitignore  LICENSE  Makefile  README.md  high-spec.cabal
app/: Main.hs
ats/: Makefile  bookstore.dats  bookstore.sats
src/: Lib.hs
