name:                high-spec
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/high-spec#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2015 Stackbuilder LLC
category:            Web
build-type:          Simple
extra-source-files:  ats/bookstore.h
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , servant
                     , servant-server
                     , network
                     , aeson
                     , time
  default-language:    Haskell2010

executable high-spec-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , high-spec
                     , servant-server
                     , warp
                     , wai
  default-language:    Haskell2010
  extra-lib-dirs:      ats
  extra-libraries:     bookstore

test-suite high-spec-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , high-spec
                     , servant-server
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/high-spec